build.txt

> vite_react_shadcn_ts@0.0.0 build
> vite build

node.exe : [31mfailed to 
load config from C:\santri-bu
ddy-dash-main\vite.config.ts
[39m
At line:1 char:1
+ & "C:\Program 
Files\nodejs/node.exe" 
"C:\Program 
Files\nodejs/node_mo ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~
    + CategoryInfo           
   : NotSpecified: ([31mfa  
  iled to ....config.ts[3   
 9m:String) [], RemoteExc    
eption
    + FullyQualifiedErrorId  
   : NativeCommandError
 
[31merror during build:
file:///C:/santri-buddy-dash-
main/node_modules/laravel-vit
e-plugin/dist/index.js:6
import { loadEnv, 
createLogger, 
defaultAllowedOrigins } from 
"vite";
                             
   ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: The requested 
module 'vite' does not 
provide an export named 
'defaultAllowedOrigins'
    at 
ModuleJob._instantiate (node:
internal/modules/esm/module_j
ob:228:21)
    at async ModuleJob.run (n
ode:internal/modules/esm/modu
le_job:335:5)
    at async onImport.tracePr
omise.__proto__ (node:interna
l/modules/esm/loader:647:26)
    at async 
loadConfigFromBundledFile (fi
le:///C:/santri-buddy-dash-ma
in/node_modules/vite/dist/nod
e/chunks/dep-C6uTJdX2.js:6695
8:15)
    at async 
loadConfigFromFile (file:///C
:/santri-buddy-dash-main/node
_modules/vite/dist/node/chunk
s/dep-C6uTJdX2.js:66799:24)
    at async resolveConfig (f
ile:///C:/santri-buddy-dash-m
ain/node_modules/vite/dist/no
de/chunks/dep-C6uTJdX2.js:663
99:24)
    at async build (file:///C
:/santri-buddy-dash-main/node
_modules/vite/dist/node/chunk
s/dep-C6uTJdX2.js:65487:18)
    at async CAC.<anonymous> 
(file:///C:/santri-buddy-dash
-main/node_modules/vite/dist/
node/cli.js:829:5)[39m
